Remove unnecessary lines