@@ -9,6 +9,7 @@ import java.sql.DriverManager;
 import java.sql.SQLException;
 import java.util.Properties;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Hello world!
@@ -21,14 +22,13 @@ public class App
 //                Paths.get("C:\\Users\\sayan\\Videos\\Captures\\F1 23 2025-04-01 22-50-28.mp4"),
 //                VideoResolution.RES_240p_SD.getWidth(), VideoResolution.RES_240p_SD.getHeight());
 
-        Properties dbConnProps = new Properties();
-        dbConnProps.put("user", "admin");
-        dbConnProps.put("password", "a1d2m3i4n5");
-        System.out.println("dbConnProps = " + dbConnProps);
-        System.out.println("JDBC Drivers: " + DriverManager.drivers().toList());
-        Connection dbConn = DriverManager.getConnection(
-                "jdbc:mysql://videoprocessing-db.c4xok8sm2nsh.us-east-1.rds.amazonaws.com:3306", dbConnProps);
-
+//        Properties dbConnProps = new Properties();
+//        dbConnProps.put("user", "admin");
+//        dbConnProps.put("password", "a1d2m3i4n5");
+//        System.out.println("dbConnProps = " + dbConnProps);
+//        System.out.println("JDBC Drivers: " + DriverManager.drivers().collect(Collectors.toList()));
+//        Connection dbConn = DriverManager.getConnection(
+//                "jdbc:mysql://videoprocessing-db.c4xok8sm2nsh.us-east-1.rds.amazonaws.com:3306", dbConnProps);
 
     }
 }
